openapi - get /projects/{id}
